# music-fetch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/app_icon/: MusicFetch.icns
macos/: Package.swift
macos/Sources/: AppModel.swift  AppSupport.swift  AudioCapture.swift  BackendController.swift  MusicFetchMac.swift  MusicFetchMacApp.swift  ResultsViews.swift  SettingsViews.swift  ShellViews.swift  Theme.swift
macos/Sources/Resources/: backend-command.txt
packaging/homebrew/: music-fetch.rb
scripts/: bootstrap_macos.sh  build_macos_app.sh  generate_app_icon.py
src/music_fetch/: __init__.py  api.py  artifact_service.py  cli.py  config.py  context.py  db.py  doctor.py  eval.py  fusion.py  identity.py  installer.py  library_service.py  links.py  long_mix.py  media.py  models.py  provider_registry.py  service.py  sources.py  tui.py  utils.py
src/music_fetch/providers/: __init__.py  acrcloud.py  audd.py  base.py  catalog.py  vibra.py
tests/: conftest.py  test_api.py  test_cli.py  test_db.py  test_fusion.py  test_identity.py  test_long_mix.py  test_macos_packaging.py  test_media.py  test_models.py  test_providers.py  test_reliability.py  test_service.py  test_sources.py  test_vibra_provider.py
tests/fixtures/providers/: audd_result.json  vibra_result.json
