[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "music-fetch"
version = "0.3.1"
description = "Local-first music recognition for videos, playlists, streams, and files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "x1f4r" }]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "platformdirs>=4.3.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "rich>=13.9.0",
  "textual>=0.88.0",
  "typer>=0.12.5",
  "uvicorn>=0.32.0",
  "yt-dlp>=2026.1.29",
  "librosa>=0.10.2",
  "numpy>=2.1.0",
  "onnxruntime>=1.20.0",
  "scipy>=1.14.0",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
separation = ["audio-separator[cpu]>=0.42.0"]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
music-fetch = "music_fetch.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/music_fetch"]
